services/network/speedtest/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: speedtest
  namespace: speedtest
spec:
  parentRefs:
    - name: internal
      namespace: gateway
  hostnames:
    - "speed.<path:argocd:common-secrets#homelab-domain>"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: openspeedtest
          port: 3000
